--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "nest-puppeteer",
+  "name": "@noahqte/nest-puppeteer",
   "description": "Puppeteer (Headless Chrome) provider for Nest.js",
   "license": "MIT",
   "author": "Konstantin Vyatkin <tino@vtkn.io>",
-  "homepage": "https://github.com/tinovyatkin/nest-puppeteer#readme",
+  "homepage": "https://github.com/noaholsson/nest-puppeteer#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tinovyatkin/nest-puppeteer.git"
+    "url": "git+https://github.com/noaholsson/nest-puppeteer.git"
   },
   "bugs": {
-    "url": "https://github.com/tinovyatkin/nest-puppeteer/issues"
+    "url": "https://github.com/noaholsson/nest-puppeteer/issues"
   },
   "version": "1.1.1",
   "main": "dist/index.js",
