--- a/tsconfig.json
+++ b/tsconfig.json
@@ -64,7 +64,8 @@
     "emitDecoratorMetadata": true /* Enables experimental support for emitting type metadata for decorators. */,
 
     /* Advanced Options */
-    "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
+    "forceConsistentCasingInFileNames": true, /* Disallow inconsistently-cased references to the same file. */
+    "skipLibCheck": true
   },
   "exclude": ["node_modules", "./dist"],
   "include": ["./src", "./__tests__/"]
